--- a/README.mdx
+++ b/README.mdx
@@ -1,25 +1,8 @@
-# Auth
+# OAuth2 Server and Client Bundled in React Router v7
 
-- a manning 4 part liveproject beginning with [build an auth server](https://www.manning.com/liveproject/build-an-authorization-server)
-- here is my current understanding of how oauth works
-  ![JS Streams Observable](./media/oauth.png)
+### background
 
-- building out the first part of the auth server with the following endpoints and reading about how it is based on events got me to thiking perhaps it would make sense to get deeper into this area with some more background before i proceed
-
-  1. /.well-known/jwks.json
-  2. .well-known/openid-configuration
-
-## JS Node and Web Streams
-
-- [erick wendell mastering node streams](https://hotmart.com/en/club/masteringnodejsstreams/products/2105756/content/2OM01a8x76)
-- i jumped to this course and am bundling it with auth because i feel it may provide some good background material on events processing
-
----
-
-```bash
-node --inspect authorizationServer.js
-chrome://inspect
-```
+Going through manning OAuth2 in action book and reproducing the server client and api resources in react router.
 
 ## OAuth Flow State Management (code and token)
 
